# four-souls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clear_records.sh  client.sh  configure.sh  four-souls-client  four-souls-server  me.json  notes.txt  players.json  record1660201957.fsr  record1660982387.fsr  record1661085086.fsr  record1661142091.fsr  run.sh  server.sh  state.json
assets/: .gitignore  config.json  config1.json
bots/: data.json  experimantal.lua  experimental.lua  impatient.lua  random.lua  smart.lua
data/items/: defeated-using.json
data/monster/: data-result.json  data.json
game/: bonus_souls.json  characters.json  characters1.json  config.json  loot.json  monsters.json  port.py  script.py  setup.lua  starting_items.json  treasures.json  treasures1.json  treasures2.json  treasures_actual.json
game/bonus_souls/soul_of_gluttony/: card.json  script.lua
game/bonus_souls/soul_of_greed/: card.json  script.lua
game/bonus_souls/soul_of_guppy/: card.json  script.lua
game/bonus_souls/soul_of_lust/: card.json  script.lua
game/bonus_souls/soul_of_sloth/: card.json  script.lua
game/bonus_souls/soul_of_wrath/: card.json  script.lua
game/bonus_souls/strawberry/: card.json  script.lua
game/bots/: play_first_card.lua  player1.lua  player2.lua  random.lua
game/characters/apollyon/: card.json  script.lua
game/characters/azazel/: card.json  script.lua
game/characters/bethany/: card.json  script.lua
game/characters/blue_baby/: card.json  script.lua
game/characters/bumbo/: card.json  script.lua
game/characters/cain/: card.json  script.lua
game/characters/dark_judas/: card.json  script.lua
game/characters/eden/: card.json  script.lua
game/characters/eve/: card.json  script.lua
game/characters/guppy/: card.json  script.lua
game/characters/isaac/: card.json  script.lua
game/characters/judas/: card.json  script.lua
game/characters/keeper/: card.json  script.lua
game/characters/lazarus/: card.json  script.lua
game/characters/lilith/: card.json  script.lua
game/characters/maggy/: card.json  script.lua
game/characters/samson/: card.json  script.lua
game/characters/the_baleful/: card.json  script.lua
game/characters/the_benighted/: card.json  script.lua
game/characters/the_broken/: card.json  script.lua
game/characters/the_curdled/: card.json  script.lua
game/characters/the_dauntless/: card.json  script.lua
game/characters/the_deceiver/: card.json  script.lua
game/characters/the_empty/: card.json  script.lua
game/characters/the_enigma/: card.json  script.lua
game/characters/the_forgotten/: card.json  script.lua
game/characters/the_harlot/: card.json  script.lua
game/characters/the_hoarder/: card.json  script.lua
game/characters/the_miser/: card.json  script.lua
game/characters/the_savage/: card.json  script.lua
game/characters/the_zealot/: card.json  script.lua
game/characters/whore_of_babylon/: card.json  script.lua
game/example/: card.json  script.lua
game/loot/a_sack/: card.json  script.lua
game/loot/aaa_battery/: card.json  script.lua
game/loot/ace_of_diamonds/: card.json  script.lua
game/loot/algiz/: card.json  script.lua
game/loot/ansuz/: card.json  script.lua
game/loot/bag_lunch/: card.json  script.lua
game/loot/berkano/: card.json  script.lua
game/loot/bible_thump/: card.json  script.lua
game/loot/black_pills/: card.json  script.lua
game/loot/black_rune/: card.json  script.lua
game/loot/blank_rune/: card.json  script.lua  use.lua
game/loot/blood_penny/: card.json  script.lua  trigger.lua
game/loot/bloody_penny/: card.json  script.lua
game/loot/blue_pills/: card.json  script.lua
game/loot/bomb/: card.json  script.lua
game/loot/cains_eye/: card.json  script.lua
game/loot/callus/: card.json  script.lua
game/loot/cancer/: card.json  script.lua
game/loot/charged_penny/: card.json  script.lua
game/loot/chunk_of_amber/: card.json  script.lua
game/loot/counterfeit_penny/: card.json  script.lua
game/loot/curved_horn/: card.json  script.lua
game/loot/death/: card.json  script.lua
game/loot/demon_form/: card.json  script.lua
game/loot/dice_shard/: card.json  script.lua
game/loot/dime/: card.json  script.lua
game/loot/ehwaz/: card.json  script.lua
game/loot/four_cents/: card.json  script.lua
game/loot/gold_bomb/: card.json  script.lua
game/loot/golden_horseshoe/: card.json  script.lua
game/loot/guppys_hairball/: card.json  script.lua
game/loot/jera/: card.json  script.lua
game/loot/jester/: card.json  script.lua
game/loot/joker/: card.json  script.lua
game/loot/judgement/: card.json  script.lua
game/loot/justice/: card.json  script.lua
game/loot/lil_battery/: card.json  script.lua
game/loot/loot_card/: card.json  script.lua
game/loot/lost_soul/: card.json  script.lua
game/loot/mega_battery/: card.json  script.lua
game/loot/mega_bomb/: card.json  script.lua
game/loot/nickel/: card.json  script.lua
game/loot/one_cent/: card.json  script.lua  use.lua
game/loot/perthro/: card.json  script.lua
game/loot/purple_heart/: card.json  script.lua
game/loot/red_pills/: card.json  script.lua
game/loot/rib_of_greed/: card.json  script.lua
game/loot/short_fuse/: card.json  script.lua
game/loot/soul_heart/: card.json  script.lua
game/loot/sticky_nickel/: card.json  script.lua
game/loot/strength/: card.json  (+1 more)
records/: .gitignore
src/: client.cpp  common.hpp  main.cpp  server.cpp  sound.hpp  util.cpp  util.hpp  window.hpp
src/game/: cards.cpp  cards.hpp  core.cpp  core.hpp  match.cpp  match.hpp  player.cpp  player.hpp  types.cpp  types.hpp  util.cpp  util.hpp
src/network/: olc_network.hpp
tools/assets-migrator/: main.py
tools/card-scaler/: do.command  main.py
tools/card-scraper/: convert.py  go.mod  go.sum  main.go  missing.json  result-monsters1.json  result.json
tools/data-gatherer/: analise.py  data.json  do.sh  monsters.json  new-data.json  script.py
tools/image-converter/: main.py
tools/image-cropper/: main.py
tools/image-parser/: main.py
tools/image-scraper/: go.mod  main.go
(+789 files in other folders)
